# swiss-rail-punctuality

./: .gitignore  DE_Zoomcamp_Project_Blueprint.md  README.md  fetch_raw.py  main.py  pyproject.toml  sqlfluff.toml
airflow/: .env.example  docker-compose.yaml  requirements.txt
airflow/dags/: sbb_daily_ingest.py
data/raw/sample/: README.md
images/: exploration_phase2.html
notebooks/: exploration.py
src/swiss_rail_punctuality/: __init__.py  profiling.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
