[project]
name = "swiss-rail-punctuality"
version = "0.1.0"
description = "Swiss Rail punctuality analytics project foundation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "sqlfluff",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []